# SkyForge

./: .gitignore  CODE_OF_CONDUCT.md  CODE_WIKI.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ThirdParty.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  evaluate.py  pyproject.toml  start.bat  start.ps1  start.sh  win_start.bat
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env  .env.example  .gitignore  Dockerfile  _test_chunk.py  pyproject.toml
config/: .env.example
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  COMPETITION_EDITION.md  COMPLIANCE_MATRIX.csv  DEVELOPMENT_HISTORY.md  DO178C_COMPLIANCE_PACKAGE.md  MULTI_LANGUAGE_GUIDE.md  PLUGIN_DEVELOPMENT.md  PROJECT_REVIEW.md  README.md  ROADMAP.md  SUBMISSION_GUIDE.md  SYSTEM_ENGINEERING_AUDIT_2026-07-19.md  ThirdParty.md  USER_GUIDE.md  VERIFICATION_REPORT.md  使用教程.md  测试报告.md  (+1 more)
src/skyforge_core/: README.md  __init__.py  cli.py  pyproject.toml
src/skyforge_engine/: README.md  __init__.py  config.py  demo_mode.py  execution.py  hil_provider.py  llm_provider.py  mode_guard.py  pipeline.py  pyproject.toml
src/skyforge_engine/agents/: __init__.py  agent.py  architecture_designer.py  code_generator.py  code_generator_multi.py  code_repairer.py  contract_generator.py  llr_generator.py  misra_cpp_fixes.py  misra_fixes.py  python_fixes.py  requirement_parser.py  types.py
src/skyforge_engine/coding_standards/: __init__.py  base.py  misra_c.py  misra_cpp.py  python_safety.py
src/skyforge_engine/composable/: __init__.py  compatibility_checker.py  component_combinator.py  composition_simulator.py
src/skyforge_engine/core/: orchestrator.py  protocols.py
src/skyforge_engine/core/adapters/: __init__.py  hil_adapter.py
src/skyforge_engine/core/renderers/: __init__.py  data_collector.py  html_renderer.py  markdown_renderer.py  pdf_renderer.py
src/skyforge_engine/core/stages/: __init__.py  _utils.py  architecture_design_stage.py  code_gen_stage.py  contract_gen_stage.py  cppcheck_stage.py  formal_verification_stage.py  hil_checkpoint_stage.py  llr_gen_stage.py  repair_loop_stage.py  report_gen_stage.py  requirement_parse_stage.py  simulation_stage.py
src/skyforge_engine/core/standards/: __init__.py  misra_c.py  misra_cpp.py  python_safety.py  registry.py
src/skyforge_engine/core/strategies/: __init__.py  llm_strategy.py  mock_strategy.py
src/skyforge_engine/core/verifiers/: __init__.py  cbmc_verifier.py  chain.py  contract_verifier.py  cppcheck_verifier.py  z3_verifier.py
src/skyforge_engine/dal/: __init__.py  gcov_collector.py  mcdc_calculator.py
src/skyforge_engine/digital_twin/: __init__.py  arinc653_adapter.py  fault_injector.py  hil_adapter.py  hil_adapter_base.py  qemu_adapter.py  serial_hil.py  simulation_engine.py  virtual_mcu.py  virtual_sensor.py
src/skyforge_engine/llm/: __init__.py  api_client.py  local_client.py  mock_client.py  protocols.py  router.py
src/skyforge_engine/rag/: __init__.py  misra_searcher.py  rag_enhancer.py  rule_parser.py  semantic_search.py
src/skyforge_engine/report/: __init__.py  coupling_analyzer.py  coverage_analyzer.py  do178_objectives.py  evidence_collector.py  psac_generator.py  report_generator.py  traceability_matrix.py
src/skyforge_engine/scade/: Lustre.g4  README.md  __init__.py  lustre_ast.py  lustre_lexer.py  lustre_parser.py  lustre_to_requirement.py  lustre_visitor.py  test_example.lus
src/skyforge_engine/schemas/: __init__.py  dal_objectives.py
src/skyforge_engine/streaming/: __init__.py  task_stream_registry.py
src/skyforge_engine/tests/: test_agent_output_validation.py  test_agent_strategy.py  test_code_generator_generic.py  test_coding_standard_layer.py  test_config_paths.py  test_contract_generator.py  test_core_protocols.py  test_gcov_collector.py  test_hil_adapter.py  test_hil_adapter_layer.py  test_mode_guard.py  test_pipeline_orchestrator.py  test_pipeline_sanitize.py  test_qemu_adapter.py  test_report_renderer.py  test_requirement_parser_generic.py  test_serial_hil.py  test_unified_client_audit.py  test_verifier_chain.py
src/skyforge_engine/tools/: __init__.py  base_scanner.py  cbmc_verifier.py  contract_checker.py  contract_formal_verifier.py  contract_to_assert.py  cppcheck_scanner.py  pr_manager.py  tool_chain_validator.py  z3_verifier.py
src/skyforge_engine/utils/: __init__.py  cleanup_util.py  common_utils.py  log_util.py
src/skyforge_llm/: README.md  __init__.py  cache.py  client.py  local.py  parser.py  pyproject.toml  router.py
src/skyforge_llm/providers/: anthropic.py  base.py  openai.py  openai_responses.py
src/skyforge_llm/security/: __init__.py  auditor.py  sanitizer.py  validator.py
src/skyforge_llm/security/tests/: test_sanitizer.py
(+507 files in other folders)
