[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyforge-llm"
version = "0.4.0"
description = "SkyForge LLM — 云端API抽象与安全封装层"
requires-python = ">=3.12"
dependencies = [
    "skyforge-engine==0.4.0",
    "httpx[socks]>=0.28.1",
    "openai>=1.65.4",
    "anthropic>=0.40.0",
]

[tool.uv.sources]
skyforge-engine = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
